test/classes/nilability/errors/nilableArrFieldAccess.chpl
class C {
  var vect: [1..3] real;
}

var myC: C? = new C();
writeln(myC.vect[2]);

