test/classes/nilability/errors/nilableArrFieldAccess.good
nilableArrFieldAccess.chpl:6: error: unresolved call 'owned C?.vect'
nilableArrFieldAccess.chpl:2: note: this candidate did not match: C.vect
nilableArrFieldAccess.chpl:6: note: because method call receiver with type 'owned C?'
nilableArrFieldAccess.chpl:1: note: is passed to formal 'this: borrowed C'
nilableArrFieldAccess.chpl:6: note: try to apply the postfix ! operator to method call receiver
